tests/paczka1/fuzzy1/48098456.err
Error in line 2: S479 A68 45,8
Error in line 1: bsR A68 34,7
Error in line 24: S479 A68 20,5
